# meshcore-weather

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
client_data/: pfm_points.json  protocol.json
docs/: MeshWX_Protocol_v3.md  MeshWX_Protocol_v4_Design.md  iOS_Developer_Brief.md  puerto_rico_radar.md  v4_client_guide.md
meshcore_weather/: __init__.py  cli.py  config.py  main.py  nlp.py
meshcore_weather/emwin/: fetcher.py
meshcore_weather/geodata/: __init__.py  places.json  stations.json  zones.json
meshcore_weather/meshcore/: radio.py
meshcore_weather/parser/: pfm.py  weather.py
meshcore_weather/portal/: __init__.py  server.py
meshcore_weather/portal/routes/: __init__.py  api.py  pages.py
meshcore_weather/portal/static/: portal.css  portal.js
meshcore_weather/portal/static/geo/: cities.geojson  countries.geojson  states.geojson
meshcore_weather/portal/templates/: app.html  base.html  config.html  data.html  index.html  products.html  schedule.html  status.html
meshcore_weather/protocol/: __init__.py  broadcaster.py  coverage.py  encoders.py  fec.py  meshwx.py  radar.py  ridge.py  warnings.py
meshcore_weather/schedule/: __init__.py  executor.py  models.py  scheduler.py  store.py
scripts/: build_client_data.py  build_zone_polygons.py  setup-ollama.sh  start.sh
tests/: test_coverage.py  test_meshwx_protocol.py  test_parser.py  test_pfm.py  test_schedule.py
