[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshcore-weather"
version = "0.1.0"
description = "EMWIN weather data service for Meshcore radio networks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "meshcore>=2.3",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
sdr = [
    "numpy>=1.26",
]

[project.scripts]
meshcore-weather = "meshcore_weather.main:main"
meshcore-weather-cli = "meshcore_weather.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
meshcore_weather = ["geodata/*.json"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
